# winarg

./: Cargo.toml  README.md
.github/workflows/: rust.yml
std/: README.md  args.cpp  gen_rs_chks.rs  gen_test_cases.rs
testing/: .gitignore  Cargo.toml  README.md
testing/src/: args.cpp  main.rs  manifest.xml
testing/tests/: exhaustive.rs
winarg/: Cargo.toml  LICENSE.APACHE  LICENSE.ZLIB
winarg/src/: lib.rs  tests.rs
