[package]
name = "testing"
version = "0.1.0"
edition = "2018"

[dependencies.winarg]
path = '..\winarg'

# Enable some optimizations for testing seeing as it can take awhile with a larger data set.

[profile.test]
opt-level = 2
lto = "thin"

[profile.release]
opt-level = 3
lto = "thin"
incremental = false
codegen-units = 1
