[package]
name = "winarg"
description = "Windows command line argument parsing"
version = "0.1.0"
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["windows", "cli"]
categories = ["command-line-interface", "os::windows-apis"]
repository = "https://github.com/ChrisDenton/winarg"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []
